[package]
name = "boolog"
version = "1.0.1"
edition = "2024"
license-file = "LICENSE"
readme = "README.txt"
repository = "https://github.com/william-hood/boolog-rust"
keywords = ["log", "logger", "logging", "html"]
categories = ["development-tools", "development-tools::debugging", "development-tools::testing", "visualization"]
exclude = ["/examples", "/target", "README.md", "/.idea"]
description = "A logger that writes directly to HTML and allows visualizations of data structures, HTTP Transactions, and errors. Provides click-to-expand for log subsections and large sections of data. Supports three dark and three light themes."

[dependencies]
chrono = "0.4.40"
homedir = "0.3.4"
rstring-builder = "0.1.4"
serde_json = "1.0.140"
uuid = {  version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = {  version = "0.12.15", features = ["blocking"] }
lazy_static = "1.5.0"
serde-error = "0.1.3"
